# cbot

./: .env.example  .gitignore  .qmlls.ini  CMakeLists.txt  CMakeLists_QML.txt  CMakeLists_Redis.txt  DARK_3D_FEATURES.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.ml_worker  HIREDIS_INTEGRATION.md  IMPROVEMENTS_SUMMARY.md  LIVE_SHARE_SETUP.md  QtTradeFrontend.pro  QtTradeFrontend_QML.pro  README.md  README_QML.md  REDIS_INTEGRATION.md  build_qml.sh  build_redis.sh  docker-compose.remote.yml  docker-compose.yml  grok_curl_to_redis_postgres.py  init.sql  migrate_to_hybridbot.sh  ml.md  pubsub.txt  qml.qrc  qml_pure.qrc  redis.txt  redis_bridge.py  redis_schema_extensions.md  req.md  requirements-ml.txt  requirements.txt  setup_redis_data.sh  uhr.txt  version.in.h  worker.py
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  fetch_finnhub.py  fetch_fmp.py  fetch_yfinance.py  ml_worker.py  postgres_writer.py  requirements.txt  trading_bot.py
backend/common/: config.py  logger.py  redis_utils.py
hiredis-1.3.0/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  hiredis-targets.cmake
hiredis-1.3.0/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
hiredis-1.3.0/QtTradeFrontend_autogen/: deps  mocs_compilation.cpp
hiredis-1.3.0/QtTradeFrontend_autogen/EWIEGA46WW/: moc_charts_tab.cpp  moc_charts_tab.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
qml/: Main.qml  MainQML.qml  MainRedis.qml  MainStep3.qml  Theme.qml  Theme2.qml  qmldir_pure
qml/components/: AnimatedCard.qml  CandleChart.qml  CandleChart3D.qml  CandleChartEnhanced.qml  GrokSuggestions.qml  HeaderBar.qml  KeyboardNavigation.qml  MarketList.qml  MarketListEnhanced.qml  MarketRowDelegate.qml  MarketStatCard.qml  ModernChartView.qml  ModernMarketView.qml  ModernOrdersView.qml  ModernPortfolioView.qml  ModernSettingsView.qml  ModernSideNav.qml  NotificationDrawer.qml  NotificationItem.qml  OrderRowDelegate.qml  OrderStatCard.qml  Portfolio3D.qml  PortfolioRowDelegate.qml  PortfolioSummaryCard.qml  ResponsiveHelper.qml  SideNav.qml  StatusBadge.qml  StatusIndicator.qml  TradingSignalsChart.qml
qml/services/: DataService.qml  RedisDataService.qml
scripts/: deploy.ps1
src/: basemodel.cpp  basemodel.h  chartdatamodel.h  datapoller.cpp  datapoller.h  datapoller_improved.cpp  datapoller_improved.h  main.cpp  main_qml.cpp  marketmodel.cpp  marketmodel.h  marketmodel_improved.cpp  marketmodel_improved.h  marketmodel_refactored.h  notificationsmodel.cpp  notificationsmodel.h  ordersmodel.cpp  ordersmodel.h  portfoliomodel.cpp  portfoliomodel.h  predictionsmodel.h  qml_redis_plugin.cpp  redis_ping_main.cpp  redisclient.cpp  redisclient.h  redisclient_improved.cpp  redisclient_improved.h  statusmodel.cpp  statusmodel.h
src/models/: market_model.py
src/services/: data_updater.py  redis_client.py
